Perfomance and styling fixes: - Changed text alignment button to floating button on bottom right, with icon instead of text - Added Lazy loading for images inside card component

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,24 +29,6 @@ main {
     padding: 1% 5vw 1% 5vw;
   }
 }
-.text-orientation-button {
-  height: 20px;
-  width: 120px;
-  background-color: #eaeaea;
-  border-style: solid;
-  border-width: 0.5px;
-  border-color: #545454;
-  color: black;
-  font-weight: 400;
-  text-transform: capitalize;
-  border-radius: 6px;
-  font-size: 12px;
-  margin-left: 5px;
-  cursor: pointer;
-  position: absolute;
-  top: 20px;
-  right: 50px;
-}
 h1 {
   text-align: center;
 }
@@ -130,4 +112,32 @@ h4 {
   justify-content: center;
   width: 100%;
   height: 100%;
+}
+
+/* Floating Button */
+.text-orientation-button {
+  height: 48px;
+  width: 48px;
+  background-color: #b4d433;
+  border-style: solid;
+  border-width: 0.5px;
+  border-color: #545454;
+  box-shadow: 1px 2px 20px -12px rgba(0, 0, 0, 0.7);
+  font-weight: 400;
+  text-transform: capitalize;
+  border-radius: 100%;
+  margin-left: 5px;
+  cursor: pointer;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+.text-orientation-button img {
+  height: 24px;
+  width: 24px;
 }
